feat: added progress bar

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <p id="number">X At least one Number</p>
             <p id="special">X At least one Special Char</p>
           </div>
+          <div id="passBar">
+            <div id="innerBar"></div>
+          </div>
         </div>
       </div>
     </main>
