feat: small changes in style

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <h1>Password Checker</h1>
+          <h1>Password Verifier</h1>
           <div class="passInput">
             <input
               id="password"
